--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Birdwatching</title>
+    <title>Eltayeb Abdelrahman</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=McLaren&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,13 +16,13 @@
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <!-- The contents of this lab are from the Mozilla Developer's Network -->
 
-      <h1>Birdwatching</h1>
+      <h1>Eltayeb Abdelrahman</h1>
       <img src="dove.png" alt="a simple dove logo" />
 
-      <div class="navigation">
+      <nav>
         <ul>
           <li><span>Home</span></li>
           <li><a href="#">Get started</a></li>
@@ -28,60 +30,54 @@
           <li><a href="#">Gear</a></li>
           <li><a href="#">Forum</a></li>
         </ul>
-      </div>
-    </div>
-    <div class="main">
-      <div class="article">
+      </nav>
+    </header>
+    <main>
+      <section>
         <h2>Welcome</h2>
 
         <p>
-          Welcome to our fake birdwatching site. If this were a real site, it
-          would be the ideal place to come to learn more about birdwatching,
-          whether you are a beginner looking to learn how to get into birding,
-          or an expert wanting to share ideas, tips, and photos with other
-          like-minded people.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae molestiae temporibus in sapiente illum est natus perferendis tempore dolorem assumenda, veritatis, officiis dignissimos, non sit. Ex maxime expedita repellendus at iste velit laborum dolor ipsum. Aliquid neque, at voluptatibus doloremque, fugiat velit repellat, et non distinctio consequatur beatae quo quae?
         </p>
 
         <p>
-          So don't waste time! Get what you need, then turn off that computer
-          and get out into the great outdoors!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis numquam a obcaecati eligendi sint. Dignissimos at ex veniam consequatur. Aliquid quam atque magni inventore architecto?
         </p>
-      </div>
-      <div class="photos">
+      </section>
+      <aside>
         <h2>Favourite photos</h2>
 
-        <a href="favorite-1.jpg"
+        <a href="cat-and-dog.jpg"
           ><img
-            src="favorite-1_th.jpg"
+            src="cat-and-dog.jpg"
             alt="Small black bird, black claws, long black slender beak, links to larger version of the image"
         /></a>
-        <a href="favorite-2.jpg"
+        <a href="sleepy.jpg"
           ><img
-            src="favorite-2_th.jpg"
+            src="sleepy.jpg"
             alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"
         /></a>
-        <a href="favorite-3.jpg"
+        <a href="dog_sheep.jpg"
           ><img
-            src="favorite-3_th.jpg"
+            src="dog_sheep.jpg"
             alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"
         /></a>
-        <a href="favorite-4.jpg"
+        <a href="crazy.jpg"
           ><img
-            src="favorite-4_th.jpg"
+            src="crazy.jpg"
             alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
         /></a>
-      </div>
-    </div>
-    <div class="footer">
+      </aside>
+    </main>
+    <footer>
       <p>
-        This fake website example is CC0 — any part of this code may be reused
-        in any way you wish. Original example written by Chris Mills, 2016.
+        This website example has been written by Eltayeb Abdelrahman, 2020
       </p>
 
       <p>
         <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a>
         by Lorc.
       </p>
-    </div>
+    </footer>
   </body>
 </html>
